# EMAIL-SMS-spam-classifier

./: .gitattributes  README.md  main.py  nltk.txt  pyproject.toml
.devcontainer/: devcontainer.json
artifacts/: model.pkl  vectorizer.pkl
notebooks/: notebook1.ipynb
scripts/: load-dataset.sh  track-lfs.sh
