[project]
name = "email-sms-spam-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "streamlit>=1.48.0",
]
