[project]
name = "email-sms-spam-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "streamlit>=1.48.0",
    "wordcloud>=1.9.4",
    "xgboost>=3.0.3",
]
